docs: updated swagger.yaml to fix types codegen for /pvz GET enpoint
